2006-09-08  Aaron Stone  <aaron@serendipity.cx>

	* db.c, acl.c, imapcommands.c:
	Clarify the ACL checks for IMAP delete and rename.
	* lmtpd.c, pop3d.c, imapd.c, timsieved.c:
	Removed call to serverparent_config.
	Added service argument to call serverparent_mainloop.
	* server.c, server.h, serverparent.c, serverparent.h:
	Consolidated serverparent_config with serverparent_getopt,
	moved ClearConfig and LoadServerConfig to serverparent.
	Actually re-read the config file on receipt of SIGHUP.
	* pidfile.c:
	Add a trailing newline to the pidfile.
	* pool.c:
	Dump the initial scoreboard state from manage_start_children.

2006-09-07  Paul J Stevens <paul@nfg.nl>

	* pop3.c:
	code style cleanups
	* check_dbmail_imapd.c, dbmail-imapsession.c, dm_imaputil.c:
	speedup fetch by changing a join in _fetch_headers

2006-09-06  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.h, sievecmd.c:
	Removed superfluous header file, made functions static.
	* check_dbmail_imapd.c:
	More checks for proper address parsing.
	* serverparent.h, serverparent.c:
	All the duplicated code from the main daemons.
	* lmtpd.c, pop3d.c, imapd.c, timsieved.c:
	Lost some weight, now using common serverparent functions.
	* pidfile.c:
	Makes a local copy of the name of the file to unlink.
	* pool.h, pool.c:
	Generates a state file with a human readable scoreboard dump.
	* config.c:
	Analogues of pidfile functions for the statefile.
	* server.c:
	Dump the scoreboard on receipt of SIGUSR1.
	* dbmail.h.in, dbmailtypes.h, acinclude.m4, Makefile.am:
	Tie up some loose datatypes for the common daemon code.

2006-09-05  Paul J Stevens <paul@nfg.nl>

	* db.c, dbmail-imapsession.c, imap4.c, imapcommands.c:
	remove some spurious warnings and redundant calls to db_getmailbox

2006-09-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-message.c:
	fix typo
	* dbmail-message.c:
	do not truncate dbmail_headervalue.headervalue (closes #338)
	* dbmail-mailbox.c:
	plug the memleak in the sort code
