@@ -1,3 +1,8 @@
+2006-09-09  Aaron Stone  <aaron@serendipity.cx>
+
+	* imapcommands.c:
+	Allow mailbox renaming destination to be top-level.
+
 2006-09-08  Aaron Stone  <aaron@serendipity.cx>
 
 	* db.c, acl.c, imapcommands.c:
